--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -38,12 +38,12 @@ jobs:
       uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
       with:
         images: |
-          my-docker-hub-namespace/my-docker-hub-repository
+          wangtengda0310/my-alert
           ghcr.io/${{ github.repository }}
     - name: Build and push Docker images
       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
       with:
         context: .
         push: true
-        # tags: ${{ steps.meta.outputs.tags }}
-        # labels: ${{ steps.meta.outputs.labels }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
