--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -38,7 +38,8 @@ jobs:
       id: meta
       uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
       with:
-        images:
+        images: |
+          docker.itsnot.fun/wangtengda0310/my-alert:${{ GITHUB_ACTION }}
           ghcr.io/${{ github.repository }}
     - name: Build and push Docker images
       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
