--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -13,6 +13,9 @@ jobs:
 
     steps:
     - run: docker images
+    - run: echo GITHUB_SHA ${ GITHUB_SHA }
+    - run: echo GITHUB_JOB ${ GITHUB_JOB }
+    - run: echo GITHUB_ACTION ${{ GITHUB_ACTION }}
     - name: Cache local Maven repository
       uses: actions/cache@v2
       with:
@@ -39,7 +42,7 @@ jobs:
       uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
       with:
         images: |
-          docker.itsnot.fun/wangtengda0310/my-alert:${{ GITHUB_ACTION }}
+          docker.itsnot.fun/wangtengda0310/my-alert:${ GITHUB_ACTION }
           ghcr.io/${{ github.repository }}
     - name: Build and push Docker images
       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
