github actions wrong syntax

--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -13,9 +13,12 @@ jobs:
 
     steps:
     - run: docker images
-    - run: echo GITHUB_SHA ${ GITHUB_SHA }
-    - run: echo GITHUB_JOB ${ GITHUB_JOB }
-    - run: echo GITHUB_ACTION ${ GITHUB_ACTION }
+    - run: echo GITHUB_SHA $GITHUB_SHA
+    - run: echo GITHUB_SHA ${{ github.sha }}
+    - run: echo GITHUB_JOB $GITHUB_JOB
+    - run: echo GITHUB_JOB ${{ github.job }}
+    - run: echo GITHUB_ACTION $GITHUB_ACTION
+    - run: echo GITHUB_ACTION ${{ GITHUB_ACTION }}
     - name: Cache local Maven repository
       uses: actions/cache@v2
       with:
