--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -45,7 +45,7 @@ jobs:
       uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
       with:
         images: |
-          docker.itsnot.fun/wangtengda0310/my-alert:$GITHUB_SHA
+          docker.itsnot.fun/wangtengda0310/my-alert:${{ github.sha }}
           ghcr.io/${{ github.repository }}
     - name: Build and push Docker images
       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
