--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -51,6 +51,7 @@ jobs:
       with:
         images: |
           docker.itsnot.fun/wangtengda0310/my-alert:${{ steps.current-time.outputs.time }}
+          docker.itsnot.fun/wangtengda0310/my-alert:${{ steps.current-time.outputs.formattedTime }}
           ghcr.io/${{ github.repository }}
     - name: Build and push Docker images
       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
